--- a/code/interview.challenge.people/src/main/resources/static/index.html
+++ b/code/interview.challenge.people/src/main/resources/static/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head></head>
+<html lang="en" ng-app="myApp" class="no-js">
+	<head>
+	  <meta charset="utf-8">
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	  <title>Interview challenge people</title>
+	  <meta name="description" content="">
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <!-- css -->
+	  <link rel="stylesheet" href="app/lib/html5-boilerplate/dist/css/normalize.css">
+	  <link rel="stylesheet" href="app/lib/html5-boilerplate/dist/css/main.css">
+	  <link rel="stylesheet" href="app/app.css">
+	  <!-- js -->
+	  <script src="app/lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+	   <script src="app/lib/angular/angular.js"></script>
+	  <script src="app/lib/angular-route/angular-route.js"></script>
+	  <script src="app/app.js"></script>
+	</head>
 	<body>
-		<p>hello world</p>
+		 <div>Interview challenge people</span></div>
+	  <!-- Site content -->
+	  <div ng-view></div>
 	</body>
 </html>
