--- a/code/interview.challenge.people/src/main/resources/static/index.html
+++ b/code/interview.challenge.people/src/main/resources/static/index.html
@@ -14,16 +14,19 @@
 	  <script src="app/lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 	  <script src="app/lib/angular/angular.js"></script>
 	  <script src="app/lib/angular-route/angular-route.js"></script>
+	  
+	  <script src="app/app.js"></script>
+	  <script src="app/services/people.service.js"></script>
 	  <script src="app/pages/page1/page1.js"></script>
 	  <script src="app/pages/page1/page1.spec.js"></script>
-	  <script src="app/app.js"></script>
+	  <script src="app/config.js"></script>
 	</head>
 	<body>
 		 <div>Interview challenge people</span></div>
 		 <ul class="menu">
 			<li><a href="#!/page1">Table</a></li>
 		  </ul>
-	  <!-- Site content -->
-	  <div ng-view></div>
+	 	 <!-- Site content -->
+	  	 <div ng-view></div>
 	</body>
 </html>
