--- a/code/interview.challenge.people/src/main/resources/static/app/pages/page1/page1.html
+++ b/code/interview.challenge.people/src/main/resources/static/app/pages/page1/page1.html
@@ -7,6 +7,7 @@
       <th>Age</th>
       <th>First Name</th>
       <th>Last Name</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -15,6 +16,7 @@
        <td>{{person.age}}</td>
        <td>{{person.firstName}}</td>
        <td>{{person.lastName}}</td>
+       <td><button ng-click="vm.deletePersonById(person.id)">Delete</button></td>
     </tr>
   </tbody>
 </table>
