--- a/code/interview.challenge.people/src/main/resources/static/index.html
+++ b/code/interview.challenge.people/src/main/resources/static/index.html
@@ -15,16 +15,23 @@
 	  <script src="app/lib/angular/angular.js"></script>
 	  <script src="app/lib/angular-route/angular-route.js"></script>
 	  
+	  <!-- TODO: Replace with something locally -->
+	  <script data-require="d3@*" data-semver="3.4.6" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.6/d3.min.js"></script>
+
+	  
 	  <script src="app/app.js"></script>
 	  <script src="app/services/people.service.js"></script>
 	  <script src="app/pages/page1/page1.js"></script>
 	  <script src="app/pages/page1/page1.spec.js"></script>
+	  <script src="app/pages/page2/page2.js"></script>
+	  <script src="app/pages/page2/directives/piechart.directive.js"></script>
 	  <script src="app/config.js"></script>
 	</head>
 	<body>
 		 <div>Interview challenge people</span></div>
 		 <ul class="menu">
 			<li><a href="#!/page1">Table</a></li>
+			<li><a href="#!/page2">Chart</a></li>
 		  </ul>
 	 	 <!-- Site content -->
 	  	 <div ng-view></div>
